Fix document outline by shifting headings down a level

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -251,21 +251,21 @@ TODO Look into image replacement for checkboxes
         margin: 0 auto;
         max-width: 50em; /* 700px */
     }
-    .issues-overview h1 {
+    .issues-overview h2 {
         margin-bottom: 1em;
     }
-    .issues-overview h2 {
+    .issues-overview h3 {
         font-size: 1.1429em;
         font-weight: bold;
         padding-left: 5.3em;
     }
-    .due-date-heading {
+    .due-date-divider {
         background: url("../i/due-date-divider.png") repeat-x 0 49%;
         color: #999;
         font-size: 0.7857em;
         margin: 0 0 0.2em;
     }
-    .due-date-heading span {
+    .due-date-divider span {
         background-color: #fff;
         padding-right: 5px;
     }
@@ -337,7 +337,7 @@ TODO Look into image replacement for checkboxes
     .issue-item .creator {
         font-size: 0.9286em;
     }
-    .issue-item h3 {
+    .issue-item h4 {
         font-size: 1em;
         font-weight: bold;
         margin: 0;
